Fixing some Sonar feedback. Fixing a problem around authentication by token API. Making the authentication by WEB services compatible with desktop navigation.